--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "vite": "^6.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
